# Open-Eee-Note

./: CREDITS  LICENSE  README
dictionary_app/: CDictionaryCollectorItem.cpp  CDictionaryCollectorItem.h  CMakeLists.txt  Config.cpp  Config.h  README  dictionary.cpp  dictionary.h  dictionary_home.ui  dictionary_reader.ui  global.h  homedict.cpp  homedict.h  managedict.cpp  managedict.h  readerdict.cpp  readerdict.h  scandict.cpp  scandict.h
dictionary_app/data/: dicres.qrc
dictionary_app/include/: CustomTextEdit.h  Helper.h  PopUpMenuItem.h  PopUpWidget.h  TagListWidget.h  TagModel.h  animalthread.h  basedialog.h  basewidget.h  bigpopdialog.h  bookreaderbottombar.h  bottombarwidget.h  btnnofocusstyle.h  capturebackground.h  clicklabel.h  commonbutton.h  commonfunction.h  commonradiobutton.h  commonstringinfo.h  custombutton.h  customradiobutton.h  enotemessagebox.h  floatbar.h  forreaderwidget.h  imageeditor.h  imageeditorwidget.h  inputdialog.h  launcherbottombar.h  lcd_helper.h  loadingwidget.h  longpressbutton.h  md5.h  menudefs.h  mytextlabel.h  popwidget.h  processkeywidget.h  renamedialog.h  searchbuttonwidget.h  searchbuttonwidgetnew.h  sendtitlemessage.h  (+4 more)
dictionary_app/stardict_src/: CMakeLists.txt  collation.cpp  collation.h  common.cpp  ctype-mb.cpp  ctype-uca.cpp  ctype-utf8.cpp  data.cpp  dictmask.h  dictziplib.cpp  distance.cpp  distance.h  getuint32.h  kmp.cpp  kmp.h  lib.cpp  lib.h  m_ctype.h  m_string.h  my_global.h  stardict_libconfig.h  stddict.cpp  storage.cpp  storage.h
dvt_check/EnglishBrowser/: dvt_check
dvt_check/FullInstall/: dvt_check
dvt_check/FullInstall/install/: profile
dvt_check/Uninstall/: dvt_check
dvt_check/info/: dvt_check
dvt_check/language/: dvt_check
dvt_check/pbook/: Config.xml  dvt_check
dvt_check/pbook/etc/phonebook/: word.xml
dvt_check/telnetd/: dvt_check
